# pipeline-testing

./: .gitlab-ci.yml  Dockerfile  entrypoint.sh  pyproject.toml
pipeline-testing/: demo.py
