[tool.poetry]
name = "pipeline-testing"
version = "0.1.0"
description = ""
authors = ["Callum Newton <me@callum-newton.me>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
safety = "^1.9.0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
